--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240129101730">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240129114031">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,7 @@
 								<h3 class="part__block-title">Basic Survival</h3>
 								<div class="part__cost cost-part">
 									<button type="button" class="cost-part__currency">$</button>
-									<span class="cost-part__number">30</span>
+									<span class="cost-part__number cost-part__number_two">30</span>
 									<button type="button" class="cost-part__date">/Months</button>
 								</div>
 								<p class="part__text">Get Torque’s basic plan to optimise you lead generation process.</p>
@@ -125,7 +125,7 @@
 			</section>
 		</main>
 	</div>
-	<script src="js/app.min.js?_v=20240129101730"></script>
+	<script src="js/app.min.js?_v=20240129114031"></script>
 </body>
 
 </html>
